--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="./logo.svg" type="image/x-icon">
+    <link rel="stylesheet" href="./reset.css">
     <title>MyWallet App</title>
   </head>
   <body>
